--- a/api.css
+++ b/api.css
@@ -52,5 +52,6 @@ h4{
     width: 225px;
 }
 a{
-    color: rgb(186, 62, 62);
+    color: rgb(135, 32, 32);
+    font-family: Arial, Helvetica, sans-serif;
 }
